--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 services:
   db:
-    image: postgres:18-alpine@sha256:e3b523f9c2c4e6d9b7cdb85b0c31650468bab97ad2df22909615dd61dde88333
+    image: postgres:18-alpine
     environment:
       POSTGRES_DB: user_service_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_INITDB_ARGS: "--auth-local=scram-sha-256 --auth-host=scram-sha-256"
     ports:
       - "5432:5432"
     volumes:
