--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - .env
     ports:
       - "8080:8080"
+    entrypoint: ["/wait-for-db.sh"]
+    command: ["/user-service"]
 
 volumes:
   postgres_data:
